--- a/package.json
+++ b/package.json
@@ -25,15 +25,14 @@
         "test": "grunt test"
     },
     "devDependencies": {
-        "extend": "^3.0.0",
         "grunt": "~0.4.5",
         "grunt-contrib-clean": "^0.5.0",
         "grunt-contrib-jshint": "^0.9.2",
-        "grunt-contrib-nodeunit": "^0.3.3",
-        "stringify-object": "^2.3.0"
+        "grunt-contrib-nodeunit": "^0.3.3"
     },
-    "peerDependencies": {
-        "grunt": "~0.4.5"
+    "dependencies": {
+        "extend": "^3.0.0",
+        "stringify-object": "^2.3.0"
     },
     "keywords": [
         "gruntplugin",
