--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
         "grunt-contrib-nodeunit": "^0.3.3"
     },
     "dependencies": {
-        "extend": "^3.0.0",
+        "deepmerge": "^0.2.10",
         "stringify-object": "^2.3.0"
     },
     "keywords": [
